--- a/app/assets/stylesheets/colors.css
+++ b/app/assets/stylesheets/colors.css
@@ -1,8 +1,8 @@
-.dark-primary-color!    { background: #512DA8; }
+/*.dark-primary-color!    { background: #512DA8; }
 .default-primary-color! { background: #673AB7; }
 .light-primary-color!   { background: #D1C4E9; }
 .text-primary-color!    { color: #FFFFFF; }
 .accent-color!          { background: #FF5722; }
 .primary-text-color!    { color: #212121; }
 .secondary-text-color!  { color: #727272; }
-.divider-color!         { border-color: #B6B6B6; }
+.divider-color!         { border-color: #B6B6B6; }*/
