--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,14 +1,19 @@
 <nav class="nav navbar-default">
-  <div class="container">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand page-scroll" href="/dashboards/:id"><%= image_tag "logo_fc_1.png" %></a>
+        </div>
 
-    <div class="navbar-header collapse navbar-collapse">
-      <a class="navbar" href="#"><%= image_tag "logo_fc_1.png" %></a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Create a Project", new_project_path %></li>
-          <li><%= link_to "Calendars", calendars_path %></li>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -24,7 +29,7 @@
           <% else %>
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+              <a href="/" class="dropdown-toggle" data-toggle="dropdown"
               role="button" aria-haspopup="true" aria-expanded="false">Enter </a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Sign up", new_user_path %></li>
