--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -90,8 +90,8 @@
                     <option placeholder="Enter weight..">Hair Color</option>
                     <option>Black</option>
                     <option>Blond</option>
-                    <option>Bronw</option>
-                    <option>Withe</option>
+                    <option>Brown</option>
+                    <option>White</option>
                     <option>Red</option>
                     <option>No Hair</option>
                   </select>
@@ -101,9 +101,10 @@
                 <select class="ui basic floating dropdown button">
                   <option>Eye Color</option>
                   <option>Black</option>
-                  <option>Bronw</option>
+                  <option>Brown</option>
                   <option>Blue</option>
                   <option>Green</option>
+                  <option>Other</option>
                 </select>
               </div>
 
