--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Making the film industry even more shine.</h3>
+                    <h3 class="section-subheading text-muted">Making the film industry shine even more.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -82,7 +82,7 @@
                         <i class="fa  fa-star fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Background Performer</h4>
-                    <p class="text-muted">Just update your calendar by placing what day will be available to work.</p>
+                    <p class="text-muted">Just update your calendar and wait to work.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -90,7 +90,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Agent</h4>
-                    <p class="text-muted">See the requests of directors and make the suggestion of background performers.</p>
+                    <p class="text-muted">See the requests of directors and suggest background performers.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -98,7 +98,7 @@
                         <i class="fa fa-video-camera fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Casting Director</h4>
-                    <p class="text-muted">Create the request and select the backgrounds.</p>
+                    <p class="text-muted">Create the request and select the backgrounds for you project.</p>
                 </div>
             </div>
         </div>
